--- a/hydrodynamics_lecture.qmd
+++ b/hydrodynamics_lecture.qmd
@@ -9,13 +9,9 @@ The amount of liquid flowing through a pipe or opening is usually measured by th
 
 Volume rate of flow refers to the rate at which a fluid volume passes a given section in a flow stream. Volume rate of flow may also be referred to as capacity of flow, flow rate or discharge. It is generally given in units of volume per unit of time, cubic meters per second (m^3^/s) or liters per second (L/s).
 
-![Volume flow](images/volumeflow.png){width="7.8cm"}
+![Volume flow](images/volumeflow.png){width="10.4cm"}
 
 Consider an ideal fluid flow in a pipe of cross-section 'A' (m^2^). For an ideal fluid all the particles move to the right with a velocity of 'C' (m/s). As the fluid flow to the right with a velocity of C m/s, 'C' m of fluid pass section 1 every second. i.e. the volume of fluid passing section-1 every second is A x C.
-
-$$
-Volume\ flow = area\ x\ velocity
-$$
 
 $$
 \dot{v} = A \cdot C
@@ -31,7 +27,7 @@ Where:
 
 Consider a real fluid flowing in the same pipe. Here particle velocity will be a variable across the flow stream.
 
-![Mean velocity](images/volumeflow1.png){width="8.4cm"}
+![Mean velocity](images/volumeflow1.png){width="11.2cm"}
 
 If the mean velocity cm of all the fluid particles could be found, then similar to the ideal fluid.
 
@@ -44,10 +40,6 @@ Unless otherwise indicated, the velocity of flow is understood to refer to the a
 ## Mass Flow Rate
 
 Mass flow rate refers to the rate at which a fluid mass passes a given section in a flow stream. It is given in units of mass per unit of time, kilogram per second (kg/s). Mass flow rate is easily calculated from volume flow rate as follows.
-
-$$
-Mass\ flow = density\ x\ volume\ flow
-$$
 
 $$
 \dot{m} = \rho \cdot \dot v
@@ -81,7 +73,7 @@ Where:
 
 Continuous flow exists in a flow system when the mass flow rate is constant throughout the system. If in the diagram below, the mass flow rate at 1 is equal to that at 2, then continuity exists.
 
-![Continuity equation](images/continuity_equation.png){width="7.6cm"}
+![Continuity equation](images/continuity_equation.png){width="10.2cm"}
 
 Since $\dot{m_1} = \dot{m_2}$, therefore
 
@@ -104,7 +96,7 @@ That is, the volume flow rate is constant for an incompressible fluid.
 ::: {#exm-conteq}
 A pipe decreases in diameter from 300 mm to 200 mm. Water flows from the larger to the smaller pipe at a constant rate of 18.4 kL/min. Calculate the mass flow rate and the velocities in the larger and smaller pipe.
 
-![Example](images/continuity_equation_exm.png){width="8.9cm"}
+![Example](images/continuity_equation_exm.png){width="11.9cm"}
 
 ### Problem Statement
 
@@ -183,7 +175,7 @@ Consider the flow system shown below. For this system, assume:
 -   that there are no energy losses or additions and
 -   steady flow conditions exist.
 
-![Energy equation](images/energy_equation.png){width="7cm"}
+![Energy equation](images/energy_equation.png){width="9.3cm"}
 
 From the Law of Conservation of Energy:
 
@@ -252,7 +244,7 @@ The total head (H) will be a constant throughout a flow system if:
 ::: {#exm-energyeq}
 Consider a simple flow system consisting of a varying cross-section pipe. Water flows through this system at a rate of 2000 L/min. As the pipe increases in elevation from 30 m to 36 m it decreases in diameter from 10 cm to 3.0 cm. If the pressure is 6.5 MPa at the 30 m elevation, what is the pressure at 36 m?
 
-![Example](images/energy_equation_exm.png){width="7cm"}
+![Example](images/energy_equation_exm.png){width="9.4cm"}
 
 Find $P_2$.
 
@@ -312,6 +304,14 @@ Where:
 -   $g$ is the acceleration due to gravity.
 
 -   $h_1$ and $h_2$ are the heights of the fluid at points 1 and 2, respectively.
+
+## Venturi Meter
+
+A venturi meter measures liquid flow rates in pipelines. The device features a pipe section that narrows in the middle (called the throat) and widens at both ends, as shown below:
+
+![Venturi meter](images/venturi.png){width="9.6cm"}
+
+When the entrance and throat areas are known, and the pressure readings (or pressure difference) at these points are measured, Bernoulli's equation can be used to calculate the liquid velocity and flow rate. Typically, a venturi meter is installed horizontally in the pipeline, which simplifies calculations since there is no elevation difference between points (Z~1~ = Z~2~), thus eliminating the height terms.
 
 ::: {#exm-bernoulli}
 Water flows through a smooth, horizontal venturi meter with an entrance diameter of 375 mm and a throat diameter of 125 mm. If the pressure difference between these sections corresponds to a head of 457 mm of water, determine the mass flow rate in kg/s.
