--- a/references.bib
+++ b/references.bib
@@ -76,3 +76,39 @@ month={Mar} }
 	address = {Harlow},
 	langid = {English}
 }
+
+@book{allen2015,
+	title = {Getting Things Done: The Art of Stress-Free Productivity},
+	author = {Allen, David and Fallows, James},
+	year = {2015},
+	month = {03},
+	date = {2015-03-17},
+	publisher = {Penguin Books},
+	edition = {Revised ed. edition},
+	address = {New York City},
+	langid = {English}
+}
+
+@book{aurelius2003,
+	title = {Meditations: A New Translation},
+	author = {Aurelius, Marcus},
+	year = {2003},
+	month = {05},
+	date = {2003-05-06},
+	publisher = {Modern Library},
+	edition = {Revised ed. edition},
+	address = {New York},
+	langid = {English}
+}
+
+@book{bruser1999,
+	title = {The Art of Practicing: A Guide to Making Music from the Heart},
+	author = {Bruser, Madeline and Menuhin, Yehudi},
+	year = {1999},
+	month = {02},
+	date = {1999-02-02},
+	publisher = {Crown},
+	edition = {Illustrated edition},
+	address = {New York, NY},
+	langid = {English}
+}
